k8s/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowtrack-gateway
  namespace: flowtrack
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flowtrack-gateway
            port:
              number: 5001
